--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+memmap = "0.7.0"
+fs2 = "0.4.3"
+nix = "0.20.0"
+tempfile = "3.2.0"
 
 [build-dependencies]
 cmake = "0.1.45"
