--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ memmap = "0.7.0"
 fs2 = "0.4.3"
 nix = "0.20.0"
 tempfile = "3.2.0"
+chrono = "0.4.19"
+num = "0.4.0"
+uuid = { version = "0.8.2", features = ["v4"] }
 
 [build-dependencies]
 cmake = "0.1.45"
