--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ tempfile = "3.2.0"
 chrono = "0.4.19"
 num = "0.4.0"
 uuid = { version = "0.8.2", features = ["v4"] }
+ucs2 = "0.3.2"
+itertools = "0.10.0"
 
 [build-dependencies]
 cmake = "0.1.45"
