--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ chrono = "0.4.19"
 num = "0.4.0"
 uuid = { version = "0.8.2", features = ["v4"] }
 itertools = "0.10.0"
+static_assertions = "1.1.0"
 
 [build-dependencies]
 cmake = "0.1.45"
