--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,6 @@ edition = "2018"
 memmap = "0.7.0"
 fs2 = "0.4.3"
 nix = "0.20.0"
-tempfile = "3.2.0"
 chrono = "0.4.19"
 num = "0.4.0"
 uuid = { version = "0.8.2", features = ["v4"] }
@@ -19,3 +18,6 @@ static_assertions = "1.1.0"
 
 [build-dependencies]
 cmake = "0.1.45"
+
+[dev-dependencies]
+tempfile = "3.2.0"
