--- a/test/container/Dockerfile
+++ b/test/container/Dockerfile
@@ -1,21 +1,21 @@
-FROM rust:slim AS planner
+FROM rustlang/rust:nightly AS planner
     WORKDIR dependencies
-    RUN cargo install cargo-chef 
+    RUN cargo install cargo-chef
     COPY . .
     RUN cargo chef prepare  --recipe-path recipe.json
 
 
 # Only rebuild dependencies if recipe.json changes
-FROM rust as cacher
+FROM rustlang/rust:nightly as cacher
     WORKDIR dependencies
     RUN cargo install cargo-chef
     COPY --from=planner /dependencies/recipe.json recipe.json
     RUN cargo chef cook --recipe-path recipe.json
 
 
-FROM rust as tester
+FROM rustlang/rust:nightly as tester
     RUN apt-get update && \
-        apt-get install -y cmake dosfstools g++ python3 rsync uuid uuid-dev && \
+        apt-get install -y dosfstools python3 rsync uuid uuid-dev && \
         rm -rf /var/lib/apt/lists/*
 
     RUN mkdir -p /dependencies/target
